# toobedrock

./: .gitignore  Flow.md  config.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx  styles.css
tooagentcore/agentcore/: agentcore.json  aws-targets.json
tooagentcore/agentcore/.cli/: deployed-state.json
tooagentcore/agentcore/.llm-context/: agentcore.ts
tooagentcore/agentcore/cdk/: package-lock.json
tooagentcore/agentcore/cdk/lib/: cdk-stack.ts
tooagentcore/app/tooagentcore/: main.py
tooagentcore/app/tooglobal/: main.py  prompts.py  pyproject.toml  runtime.py
tooagentcore/app/tooglobal/agent/: agent.py
tooagentcore/app/tooglobal/data/: __init__.py  catalog.py
tooagentcore/app/tooglobal/model/: load.py
tooagentcore/app/tooglobal/runtime/: entrypoint.py
tooagentcore/app/tooglobal/tools/: __init__.py  catalog_tools.py
tooamplify/: index.html  package-lock.json  package.json
tooamplify/src/: App.tsx
