[project]
name = "too"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.11.0",
    "bedrock-agentcore-starter-toolkit>=0.3.9",
    "boto3>=1.43.14",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "starlette>=1.2.0",
    "strands-agents-tools>=0.6.0",
]
